--- a/report/report.tex
+++ b/report/report.tex
@@ -1,10 +1,10 @@
 \documentclass{memoir}
 
-\title{How to write a Report\\ for the Project of Distributed Systems}
+\title{Peer-to-peer Streaming System\\Distributed Systems Project}
 
-\author{Prof. Marino Miculan\\ DMIF, University of Udine, Italy}
+\author{Gabriele Voltan, Gianluca Zavan\\ DMIF, University of Udine, Italy}
 
-\date{Version 0.2, \today}
+\date{\today}
 
 \begin{document}
 
@@ -20,7 +20,21 @@ This document is very brief and succint, and it is by no means comprehensive of 
 %\end{titlingpage}
 
 \chapter{Introduction}\label{ch:intro}
+In this chapter the problem and the goal of the project are presented, with the aim of introducing the work done. 
 
+\section{Problem}
+The problem which this project is meant to solve is the following:
+
+\noindent \textit{“N peers want to share data with each other in pairs ($P_1, P_2$), using the available communication channels, each having a bandwidth B. When a peer $P_1$ wants to establish a connection with another peer $P_2$ it is necessary to establish the channels it will use. These channels must be chosen in such a way that the final communication channel has maximum bandwidth.”}
+
+\subsection{Problem description}
+
+
+
+
+
+
+\begin{comment}
 In this chapter you describe the main problem, and an idea of the solution.
 It is not necessary to be very detailed or formal, but it is important to explain which are the main aims and issues from the point of view of Distributed Systems:
 \begin{itemize}
@@ -30,7 +44,7 @@ It is not necessary to be very detailed or formal, but it is important to explai
 \item Your plan for testing the system.
 \item A schedule for how you plan to carry our your design and implementation
 \end{itemize}
-
+\end{comment}
 
 
 \chapter{Analysis}\label{ch:analysis}
